--- a/nicepure.scss
+++ b/nicepure.scss
@@ -10,7 +10,7 @@
 @import "base/reset";
 @import "base/normalize";
 @import "base/mixins";
-@import "base/helper";
+@import "base/helpers";
 @import "base/headings";
 @import "base/main";
 
