--- a/_vars.scss
+++ b/_vars.scss
@@ -43,12 +43,12 @@ $giga-size:         96px!default;
 $mega-size:         72px!default;
 $kilo-size:         48px!default;
 
-$h1-size:           36px!default; // .alpha
-$h2-size:           30px!default; // .beta
-$h3-size:           24px!default; // .gamma
-$h4-size:           20px!default; // .delta
-$h5-size:           16px!default; // .epsilon
-$h6-size:           14px!default; // .zeta
+$h1-size:           36px!default; // .tam1
+$h2-size:           30px!default; // .tam2
+$h3-size:           24px!default; // .tam3
+$h4-size:           20px!default; // .tam4
+$h5-size:           16px!default; // .tam5
+$h6-size:           14px!default; // .tam6
 
 $milli-size:        12px!default;
 $micro-size:        10px!default;
