Add Grunt && Test file

--- a/base/_reset.scss
+++ b/base/_reset.scss
@@ -1,11 +1,12 @@
 /*------------------------------------*\
     $RESET
 \*------------------------------------*/
-
-&,
-&:before,
-&:after{
-    @include vendor(box-sizing, border-box);
+*{
+    &,
+    &:before,
+    &:after{
+        @include vendor(box-sizing, border-box);
+    }
 }
 
 /**
