--- a/nicecss.scss
+++ b/nicecss.scss
@@ -5,7 +5,7 @@
  * Generic utility styles etc.
  */
 @import "pure";
-@import "vars";
+@import "defaults";
 
 @import "base/mixins";
 @import "base/reset";
