--- a/base/_helpers.scss
+++ b/base/_helpers.scss
@@ -18,6 +18,10 @@
 .text--center   { text-align:center!important; }
 .text--right    { text-align:right !important; }
 
+/**
+ * Text transform
+ */ 
+.text--upper 	{ text-transform: uppercase !important;}
 
 /**
  * Font weights
