--- a/objects/_grid.scss
+++ b/objects/_grid.scss
@@ -1,31 +1,72 @@
 /*------------------------------------*\
-    $EXTEND PURE GRID
+    $NICE GRID
 \*------------------------------------*/
-/**
- * Default font in grids for avoid inline-block hack side effects
- */
-.pure-g [class *= "pure-u"],
-.pure-g-r [class *= "pure-u"] {
-    font-family: $base-font-family;
+*,
+*:after,
+*:before {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box
 }
 
-/**
- * Grid with gutter
- */
-.pure-g-g 		{ margin:0; padding:0; margin-left: $gutter * -1; }
-.pure-g-g > * 	{ padding-left: $gutter; }
+.grid {
+  list-style:none;
+  margin: 0;
+  padding: 0;
+  margin-left: -$gutter;
+  &:after{
+    content: "";
+    display: table;
+    clear: both
+  }
+}
 
-/**
- * Grid with double gutter
- */
-.pure-g-gdouble 		{ margin:0; padding:0; margin-left: $gutter * -2; }
-.pure-g-gdouble > * 	{ padding-left: $gutter * 2; }
+[class*= 'cell-'] {
+  padding-left: $gutter;
+  float: left;
+}
 
-/**
- * Grid with middle gutter
- */
-.pure-g-gmiddle 		{ margin:0; padding:0; margin-left: -($gutter / 2); }
-.pure-g-gmiddle > * 	{ padding-left: $gutter / 2; }
+[class*= 'cell-']:last-of-type {
+  float: right;
+}
+
+.grid--full {
+  margin-left: 0;
+  [class*= 'cell-']{
+    padding-left: 0;
+  }
+}
+
+.cell-1     	{ width: 100%; }
+.cell-1-2   	{ width: 50%; *width: 49.969%;}
+.cell-1-3   	{ width: 33.3333%; *width: 33.3023%; }
+.cell-2-3   	{ width: 66.6667%; *width: 66.6357%; }
+.cell-1-4   	{ width: 25%; *width: 24.969%; }
+.cell-3-4   	{ width: 75%; *width: 74.969%; }
+.cell-1-5   	{ width: 20%; *width: 19.969%; }
+.cell-2-5   	{ width: 40%; *width: 39.969%; }
+.cell-3-5   	{ width: 60%; *width: 59.969%; }
+.cell-4-5   	{ width: 80%; *width: 79.969%; }
+.cell-1-6   	{ width: 16.6667%; *width: 16.6357%; }
+.cell-5-6   	{ width: 83.3333%; *width: 83.3023%; }
+.cell-1-8   	{ width: 12.5%; *width: 12.469%; }
+.cell-3-8   	{ width: 37.5%; *width: 37.469%; }
+.cell-5-8   	{ width: 62.5%; *width: 62.469%; }
+.cell-7-8   	{ width: 87.5%; *width: 87.469%; }
+.cell-1-12  	{ width: 8.3333%; *width: 8.3023%; }
+.cell-5-12  	{ width: 41.6667%; *width: 41.6357%; }
+.cell-7-12  	{ width: 58.3333%; *width: 58.3023%; }
+.cell-11-12 	{ width: 91.6667%; *width: 91.6357%; }
+.cell-1-24  	{ width: 4.1667%; *width: 4.1357%; }
+.cell-5-24  	{ width: 20.8333%; *width: 20.8023%; }
+.cell-7-24  	{ width: 29.1667%; *width: 29.1357%; }
+.cell-11-24 	{ width: 45.8333%; *width: 45.8023%; }
+.cell-13-24 	{ width: 54.1667%; *width: 54.1357%; }
+.cell-17-24 	{ width: 70.8333%; *width: 70.8023%; }
+.cell-19-24 	{ width: 79.1667%; *width: 79.1357%; }
+.cell-23-24 	{ width: 95.8333%; *width: 95.8023%; }
 
 
 /**
@@ -33,34 +74,34 @@
  */
 
  @mixin device-type-grid($device:""){
- 	.#{$device}pure-u-1 	{ width: 100%!important; }
- 	.#{$device}pure-u-1-2 	{ width: 50%!important; *width: 49.969%!important; }
- 	.#{$device}pure-u-1-3 	{ width: 33.3333%!important; *width: 33.3023%!important; }
- 	.#{$device}pure-u-2-3 	{ width: 66.6667%!important; *width: 66.6357%!important; }
- 	.#{$device}pure-u-1-4 	{ width: 25%!important; *width: 24.969%!important; }
- 	.#{$device}pure-u-3-4 	{ width: 75%!important; *width: 74.969%!important; }
- 	.#{$device}pure-u-1-5 	{ width: 20%!important; *width: 19.969%!important; }
- 	.#{$device}pure-u-2-5 	{ width: 40%!important; *width: 39.969%!important; }
- 	.#{$device}pure-u-3-5 	{ width: 60%!important; *width: 59.969%!important; }
- 	.#{$device}pure-u-4-5 	{ width: 80%!important; *width: 79.969%!important; }
- 	.#{$device}pure-u-1-6 	{ width: 16.6667%!important; *width: 16.6357%!important; }
- 	.#{$device}pure-u-5-6 	{ width: 83.3333%!important; *width: 83.3023%!important; }
- 	.#{$device}pure-u-1-8 	{ width: 12.5%!important; *width: 12.469%!important; }
- 	.#{$device}pure-u-3-8 	{ width: 37.5%!important; *width: 37.469%!important; }
- 	.#{$device}pure-u-5-8 	{ width: 62.5%!important; *width: 62.469%!important; }
- 	.#{$device}pure-u-7-8 	{ width: 87.5%!important; *width: 87.469%!important; }
- 	.#{$device}pure-u-1-12 	{ width: 8.3333%!important; *width: 8.3023%!important; }
- 	.#{$device}pure-u-5-12 	{ width: 41.6667%!important; *width: 41.6357%!important; }
- 	.#{$device}pure-u-7-12 	{ width: 58.3333%!important; *width: 58.3023%!important; }
- 	.#{$device}pure-u-11-12 { width: 91.6667%!important; *width: 91.6357%!important; }
- 	.#{$device}pure-u-1-24 	{ width: 4.1667%!important; *width: 4.1357%!important; }
- 	.#{$device}pure-u-5-24 	{ width: 20.8333%!important; *width: 20.8023%!important; }
- 	.#{$device}pure-u-7-24 	{ width: 29.1667%!important; *width: 29.1357%!important; }
- 	.#{$device}pure-u-11-24 { width: 45.8333%!important; *width: 45.8023%!important; }
- 	.#{$device}pure-u-13-24 { width: 54.1667%!important; *width: 54.1357%!important; }
- 	.#{$device}pure-u-17-24 { width: 70.8333%!important; *width: 70.8023%!important; }
- 	.#{$device}pure-u-19-24 { width: 79.1667%!important; *width: 79.1357%!important; }
- 	.#{$device}pure-u-23-24 { width: 95.8333%!important; *width: 95.8023%!important; }
+ 	.#{$device}cell-1 		{ width: 100%!important; }
+ 	.#{$device}cell-1-2 	{ width: 50%!important; *width: 49.969%!important; }
+ 	.#{$device}cell-1-3 	{ width: 33.3333%!important; *width: 33.3023%!important; }
+ 	.#{$device}cell-2-3 	{ width: 66.6667%!important; *width: 66.6357%!important; }
+ 	.#{$device}cell-1-4 	{ width: 25%!important; *width: 24.969%!important; }
+ 	.#{$device}cell-3-4 	{ width: 75%!important; *width: 74.969%!important; }
+ 	.#{$device}cell-1-5 	{ width: 20%!important; *width: 19.969%!important; }
+ 	.#{$device}cell-2-5 	{ width: 40%!important; *width: 39.969%!important; }
+ 	.#{$device}cell-3-5 	{ width: 60%!important; *width: 59.969%!important; }
+ 	.#{$device}cell-4-5 	{ width: 80%!important; *width: 79.969%!important; }
+ 	.#{$device}cell-1-6 	{ width: 16.6667%!important; *width: 16.6357%!important; }
+ 	.#{$device}cell-5-6 	{ width: 83.3333%!important; *width: 83.3023%!important; }
+ 	.#{$device}cell-1-8 	{ width: 12.5%!important; *width: 12.469%!important; }
+ 	.#{$device}cell-3-8 	{ width: 37.5%!important; *width: 37.469%!important; }
+ 	.#{$device}cell-5-8 	{ width: 62.5%!important; *width: 62.469%!important; }
+ 	.#{$device}cell-7-8 	{ width: 87.5%!important; *width: 87.469%!important; }
+ 	.#{$device}cell-1-12 	{ width: 8.3333%!important; *width: 8.3023%!important; }
+ 	.#{$device}cell-5-12 	{ width: 41.6667%!important; *width: 41.6357%!important; }
+ 	.#{$device}cell-7-12 	{ width: 58.3333%!important; *width: 58.3023%!important; }
+ 	.#{$device}cell-11-12 	{ width: 91.6667%!important; *width: 91.6357%!important; }
+ 	.#{$device}cell-1-24 	{ width: 4.1667%!important; *width: 4.1357%!important; }
+ 	.#{$device}cell-5-24 	{ width: 20.8333%!important; *width: 20.8023%!important; }
+ 	.#{$device}cell-7-24 	{ width: 29.1667%!important; *width: 29.1357%!important; }
+ 	.#{$device}cell-11-24 	{ width: 45.8333%!important; *width: 45.8023%!important; }
+ 	.#{$device}cell-13-24 	{ width: 54.1667%!important; *width: 54.1357%!important; }
+ 	.#{$device}cell-17-24 	{ width: 70.8333%!important; *width: 70.8023%!important; }
+ 	.#{$device}cell-19-24 	{ width: 79.1667%!important; *width: 79.1357%!important; }
+ 	.#{$device}cell-23-24 	{ width: 95.8333%!important; *width: 95.8023%!important; }
  }
 
  @each $breakpoint in $breakpoints{
