Remove purecss & Add buttons

--- a/_defaults.scss
+++ b/_defaults.scss
@@ -17,6 +17,7 @@ $base-font-family:  sans-serif!default;
  * Default colour for objects’ borders etc.
  */
 $base-ui-color:     #ccc!default;
+$base-text-color:   #333!default;
 
 
 
