--- a/nicecss.scss
+++ b/nicecss.scss
@@ -1,10 +1,7 @@
 /*------------------------------------*\
     $IMPORTS
 \*------------------------------------*/
-/**
- * Generic utility styles etc.
- */
-@import "pure";
+
 @import "defaults";
 
 @import "base/mixins";
@@ -12,7 +9,8 @@
 @import "base/normalize";
 @import "base/helpers";
 @import "base/headings";
+@import "base/buttons";
 @import "base/main";
 
-@import "objects/flag";
 @import "objects/grid";
+@import "objects/flag";
