--- a/objects/_grid.scss
+++ b/objects/_grid.scss
@@ -74,6 +74,38 @@
  * Responsive grid
  */
 
+ // Default mobile grid to 100%
+ @include respond-to(nth(nth($breakpoints,1),1)){
+ 	.cell--1     	{ width: 100%; }
+ 	.cell--1-2   	{ width: 100%; }
+ 	.cell--1-3   	{ width: 100%; }
+ 	.cell--2-3   	{ width: 100%; }
+ 	.cell--1-4   	{ width: 100%; }
+ 	.cell--3-4   	{ width: 100%; }
+ 	.cell--1-5   	{ width: 100%; }
+ 	.cell--2-5   	{ width: 100%; }
+ 	.cell--3-5   	{ width: 100%; }
+ 	.cell--4-5   	{ width: 100%; }
+ 	.cell--1-6   	{ width: 100%; }
+ 	.cell--5-6   	{ width: 100%; }
+ 	.cell--1-8   	{ width: 100%; }
+ 	.cell--3-8   	{ width: 100%; }
+ 	.cell--5-8   	{ width: 100%; }
+ 	.cell--7-8   	{ width: 100%; }
+ 	.cell--1-12  	{ width: 100%; }
+ 	.cell--5-12  	{ width: 100%; }
+ 	.cell--7-12  	{ width: 100%; }
+ 	.cell--11-12 	{ width: 100%; }
+ 	.cell--1-24  	{ width: 100%; }
+ 	.cell--5-24  	{ width: 100%; }
+ 	.cell--7-24  	{ width: 100%; }
+ 	.cell--11-24 	{ width: 100%; }
+ 	.cell--13-24 	{ width: 100%; }
+ 	.cell--17-24 	{ width: 100%; }
+ 	.cell--19-24 	{ width: 100%; }
+ 	.cell--23-24 	{ width: 100%; }
+ }
+
  @mixin device-type-grid($device:""){
  	.#{$device}cell--1 		{ width: 100%!important; }
  	.#{$device}cell--1-2 	{ width: 50%!important; *width: 49.969%!important; }
