--- a/base/_headings.scss
+++ b/base/_headings.scss
@@ -2,30 +2,36 @@
     $HEADINGS
 \*------------------------------------*/
 
-h1,.tam1{
+h1,.tam1 {
     @include font-size($h1-size);
 }
-h2,.tam2{
+h2,.tam2 {
     @include font-size($h2-size);
 }
-h3,.tam3{
+h3,.tam3 {
     @include font-size($h3-size);
 }
-h4,.tam4{
+h4,.tam4 {
     @include font-size($h4-size);
 }
-h5,.tam5{
+h5,.tam5 {
     @include font-size($h5-size);
 }
-h6,.tam6{
+h6,.tam6 {
     @include font-size($h6-size);
 }
-.tam7{
+.tam7 {
     @include font-size($giga-size);
 }
-.tam8{
+.tam8 {
     @include font-size($mega-size);
 }
-.tam9{
+.tam9 {
     @include font-size($kilo-size);
+}
+.milli {
+    @include font-size($milli-size);   
+}
+.micro {
+    @include font-size($micro-size);
 }
