Add decoration none style

--- a/base/_helpers.scss
+++ b/base/_helpers.scss
@@ -36,6 +36,10 @@
 */
 .text--unitalic 	{ font-style: normal!important; }
 
+/**
+* Font styled
+*/
+.decor--none 	{ text-decoration: none!important; }
 
 /**
 * Positions
