--- a/base/_headings.scss
+++ b/base/_headings.scss
@@ -20,13 +20,13 @@ h5,.tam5 {
 h6,.tam6 {
     @include font-size($h6-size);
 }
-.tam7 {
+.giga {
     @include font-size($giga-size);
 }
-.tam8 {
+.mega {
     @include font-size($mega-size);
 }
-.tam9 {
+.kilo {
     @include font-size($kilo-size);
 }
 .milli {
