Add form styles

--- a/nicecss.scss
+++ b/nicecss.scss
@@ -11,7 +11,8 @@
 @import "base/headings";
 @import "base/buttons";
 @import "base/main";
+@import "base/lists";
+@import "base/forms";
 
 @import "objects/grid";
-@import "objects/lists";
 @import "objects/flag";
