--- a/base/_main.scss
+++ b/base/_main.scss
@@ -3,6 +3,6 @@
 \*------------------------------------*/
 html{
     font:#{($base-font-size/16px)*1em}/#{$line-height-ratio} $base-font-family;
-    overflow-y: auto;
-    min-height:100%;
+    // overflow-y: auto;
+    // min-height:100%;
 }
