--- a/base/_lists.scss
+++ b/base/_lists.scss
@@ -1,7 +1,7 @@
 /*------------------------------------*\
     $NICE LISTS
 \*------------------------------------*/
-
+%list,
 .list {
 	padding: 0;
 	margin: 0;
@@ -13,10 +13,12 @@
 	}
 }
 
+%list--unstyled,
 .list--unstyled {
 	list-style:none;
 }
 
+%list--inline,
 .list--inline {
 	list-style: none;
 	padding: 0;
