--- a/objects/_grid.scss
+++ b/objects/_grid.scss
@@ -11,7 +11,8 @@
           box-sizing: border-box
 }
 
-.grid {
+.grid,
+%grid {
   list-style:none;
   margin: 0;
   padding: 0;
@@ -21,104 +22,76 @@
     display: table;
     clear: both
   }
+  & > * {
+    padding-left: $gutter;
+    float: left;
+    width: 100%;
+  }
+  @include respond-to(nth(nth($breakpoints,1),1)){
+    & > * {
+      width: 100% !important;
+    }
+  }
 }
 
-[class*= 'cell--'] {
-  padding-left: $gutter;
-  float: left;
-  width: 100%;
-}
-
-// [class*= 'cell--']:last-of-type {
-//   float: right;
-// }
-
-.grid--full {
+.grid--full,
+%grid--full {
   margin-left: 0;
   [class*= 'cell--']{
     padding-left: 0;
   }
 }
 
-.grid--wide {
+.grid--wide,
+%grid--wide {
   margin-left: $gutter * -2;
   [class*= 'cell--']{
     padding-left: $gutter * 2;
   }
 }
 
-.grid--narrow {
+.grid--narrow,
+%grid--narrow {
   margin-left: -($gutter / 2);
   [class*= 'cell--']{
     padding-left: $gutter / 2;
   }
 }
 
-.cell--1     	{ width: 100%; }
-.cell--1-2   	{ width: 50%; *width: 49.969%;}
-.cell--1-3   	{ width: 33.3333%; *width: 33.3023%; }
-.cell--2-3   	{ width: 66.6667%; *width: 66.6357%; }
-.cell--1-4   	{ width: 25%; *width: 24.969%; }
-.cell--3-4   	{ width: 75%; *width: 74.969%; }
-.cell--1-5   	{ width: 20%; *width: 19.969%; }
-.cell--2-5   	{ width: 40%; *width: 39.969%; }
-.cell--3-5   	{ width: 60%; *width: 59.969%; }
-.cell--4-5   	{ width: 80%; *width: 79.969%; }
-.cell--1-6   	{ width: 16.6667%; *width: 16.6357%; }
-.cell--5-6   	{ width: 83.3333%; *width: 83.3023%; }
-.cell--1-8   	{ width: 12.5%; *width: 12.469%; }
-.cell--3-8   	{ width: 37.5%; *width: 37.469%; }
-.cell--5-8   	{ width: 62.5%; *width: 62.469%; }
-.cell--7-8   	{ width: 87.5%; *width: 87.469%; }
-.cell--1-12  	{ width: 8.3333%; *width: 8.3023%; }
-.cell--5-12  	{ width: 41.6667%; *width: 41.6357%; }
-.cell--7-12  	{ width: 58.3333%; *width: 58.3023%; }
-.cell--11-12 	{ width: 91.6667%; *width: 91.6357%; }
-.cell--1-24  	{ width: 4.1667%; *width: 4.1357%; }
-.cell--5-24  	{ width: 20.8333%; *width: 20.8023%; }
-.cell--7-24  	{ width: 29.1667%; *width: 29.1357%; }
-.cell--11-24 	{ width: 45.8333%; *width: 45.8023%; }
-.cell--13-24 	{ width: 54.1667%; *width: 54.1357%; }
-.cell--17-24 	{ width: 70.8333%; *width: 70.8023%; }
-.cell--19-24 	{ width: 79.1667%; *width: 79.1357%; }
-.cell--23-24 	{ width: 95.8333%; *width: 95.8023%; }
+%cell--1, .cell--1        	{ width: 100%; }
+%cell--1-2, .cell--1-2   	  { width: 50%; *width: 49.969%;}
+%cell--1-3, .cell--1-3   	  { width: 33.3333%; *width: 33.3023%; }
+%cell--2-3, .cell--2-3   	  { width: 66.6667%; *width: 66.6357%; }
+%cell--1-4, .cell--1-4   	  { width: 25%; *width: 24.969%; }
+%cell--3-4, .cell--3-4   	  { width: 75%; *width: 74.969%; }
+%cell--1-5, .cell--1-5   	  { width: 20%; *width: 19.969%; }
+%cell--2-5, .cell--2-5   	  { width: 40%; *width: 39.969%; }
+%cell--3-5, .cell--3-5   	  { width: 60%; *width: 59.969%; }
+%cell--4-5, .cell--4-5   	  { width: 80%; *width: 79.969%; }
+%cell--1-6, .cell--1-6   	  { width: 16.6667%; *width: 16.6357%; }
+%cell--5-6, .cell--5-6   	  { width: 83.3333%; *width: 83.3023%; }
+%cell--1-8, .cell--1-8   	  { width: 12.5%; *width: 12.469%; }
+%cell--3-8, .cell--3-8   	  { width: 37.5%; *width: 37.469%; }
+%cell--5-8, .cell--5-8   	  { width: 62.5%; *width: 62.469%; }
+%cell--7-8, .cell--7-8   	  { width: 87.5%; *width: 87.469%; }
+%cell--1-12, .cell--1-12  	{ width: 8.3333%; *width: 8.3023%; }
+%cell--5-12, .cell--5-12  	{ width: 41.6667%; *width: 41.6357%; }
+%cell--7-12, .cell--7-12  	{ width: 58.3333%; *width: 58.3023%; }
+%cell--11-12, .cell--11-12 	{ width: 91.6667%; *width: 91.6357%; }
+%cell--1-24, .cell--1-24  	{ width: 4.1667%; *width: 4.1357%; }
+%cell--5-24, .cell--5-24  	{ width: 20.8333%; *width: 20.8023%; }
+%cell--7-24, .cell--7-24  	{ width: 29.1667%; *width: 29.1357%; }
+%cell--11-24, .cell--11-24 	{ width: 45.8333%; *width: 45.8023%; }
+%cell--13-24, .cell--13-24 	{ width: 54.1667%; *width: 54.1357%; }
+%cell--17-24, .cell--17-24 	{ width: 70.8333%; *width: 70.8023%; }
+%cell--19-24, .cell--19-24 	{ width: 79.1667%; *width: 79.1357%; }
+%cell--23-24, .cell--23-24 	{ width: 95.8333%; *width: 95.8023%; }
 
 
 /**
  * Responsive grid
  */
 
- // Default mobile grid to 100%
- @include respond-to(nth(nth($breakpoints,1),1)){
- 	.cell--1     	{ width: 100%; }
- 	.cell--1-2   	{ width: 100%; }
- 	.cell--1-3   	{ width: 100%; }
- 	.cell--2-3   	{ width: 100%; }
- 	.cell--1-4   	{ width: 100%; }
- 	.cell--3-4   	{ width: 100%; }
- 	.cell--1-5   	{ width: 100%; }
- 	.cell--2-5   	{ width: 100%; }
- 	.cell--3-5   	{ width: 100%; }
- 	.cell--4-5   	{ width: 100%; }
- 	.cell--1-6   	{ width: 100%; }
- 	.cell--5-6   	{ width: 100%; }
- 	.cell--1-8   	{ width: 100%; }
- 	.cell--3-8   	{ width: 100%; }
- 	.cell--5-8   	{ width: 100%; }
- 	.cell--7-8   	{ width: 100%; }
- 	.cell--1-12  	{ width: 100%; }
- 	.cell--5-12  	{ width: 100%; }
- 	.cell--7-12  	{ width: 100%; }
- 	.cell--11-12 	{ width: 100%; }
- 	.cell--1-24  	{ width: 100%; }
- 	.cell--5-24  	{ width: 100%; }
- 	.cell--7-24  	{ width: 100%; }
- 	.cell--11-24 	{ width: 100%; }
- 	.cell--13-24 	{ width: 100%; }
- 	.cell--17-24 	{ width: 100%; }
- 	.cell--19-24 	{ width: 100%; }
- 	.cell--23-24 	{ width: 100%; }
- }
 
  @mixin device-type-grid($device:""){
  	.#{$device}cell--1 		{ width: 100%!important; }
