--- a/objects/_grid.scss
+++ b/objects/_grid.scss
@@ -37,7 +37,7 @@
 .grid--full,
 %grid--full {
   margin-left: 0;
-  [class*= 'cell--']{
+  & > * {
     padding-left: 0;
   }
 }
@@ -45,7 +45,7 @@
 .grid--wide,
 %grid--wide {
   margin-left: $gutter * -2;
-  [class*= 'cell--']{
+  & > * {
     padding-left: $gutter * 2;
   }
 }
@@ -53,7 +53,7 @@
 .grid--narrow,
 %grid--narrow {
   margin-left: -($gutter / 2);
-  [class*= 'cell--']{
+  & > * {
     padding-left: $gutter / 2;
   }
 }
@@ -88,45 +88,58 @@
 %cell--23-24, .cell--23-24 	{ width: 95.8333%; *width: 95.8023%; }
 
 
+
 /**
- * Responsive grid
+ * Mixins
  */
 
-
- @mixin device-type-grid($device:""){
- 	.#{$device}cell--1 		{ width: 100%!important; }
- 	.#{$device}cell--1-2 	{ width: 50%!important; *width: 49.969%!important; }
- 	.#{$device}cell--1-3 	{ width: 33.3333%!important; *width: 33.3023%!important; }
- 	.#{$device}cell--2-3 	{ width: 66.6667%!important; *width: 66.6357%!important; }
- 	.#{$device}cell--1-4 	{ width: 25%!important; *width: 24.969%!important; }
- 	.#{$device}cell--3-4 	{ width: 75%!important; *width: 74.969%!important; }
- 	.#{$device}cell--1-5 	{ width: 20%!important; *width: 19.969%!important; }
- 	.#{$device}cell--2-5 	{ width: 40%!important; *width: 39.969%!important; }
- 	.#{$device}cell--3-5 	{ width: 60%!important; *width: 59.969%!important; }
- 	.#{$device}cell--4-5 	{ width: 80%!important; *width: 79.969%!important; }
- 	.#{$device}cell--1-6 	{ width: 16.6667%!important; *width: 16.6357%!important; }
- 	.#{$device}cell--5-6 	{ width: 83.3333%!important; *width: 83.3023%!important; }
- 	.#{$device}cell--1-8 	{ width: 12.5%!important; *width: 12.469%!important; }
- 	.#{$device}cell--3-8 	{ width: 37.5%!important; *width: 37.469%!important; }
- 	.#{$device}cell--5-8 	{ width: 62.5%!important; *width: 62.469%!important; }
- 	.#{$device}cell--7-8 	{ width: 87.5%!important; *width: 87.469%!important; }
- 	.#{$device}cell--1-12 	{ width: 8.3333%!important; *width: 8.3023%!important; }
- 	.#{$device}cell--5-12 	{ width: 41.6667%!important; *width: 41.6357%!important; }
- 	.#{$device}cell--7-12 	{ width: 58.3333%!important; *width: 58.3023%!important; }
- 	.#{$device}cell--11-12 	{ width: 91.6667%!important; *width: 91.6357%!important; }
- 	.#{$device}cell--1-24 	{ width: 4.1667%!important; *width: 4.1357%!important; }
- 	.#{$device}cell--5-24 	{ width: 20.8333%!important; *width: 20.8023%!important; }
- 	.#{$device}cell--7-24 	{ width: 29.1667%!important; *width: 29.1357%!important; }
- 	.#{$device}cell--11-24 	{ width: 45.8333%!important; *width: 45.8023%!important; }
- 	.#{$device}cell--13-24 	{ width: 54.1667%!important; *width: 54.1357%!important; }
- 	.#{$device}cell--17-24 	{ width: 70.8333%!important; *width: 70.8023%!important; }
- 	.#{$device}cell--19-24 	{ width: 79.1667%!important; *width: 79.1357%!important; }
- 	.#{$device}cell--23-24 	{ width: 95.8333%!important; *width: 95.8023%!important; }
+ @mixin grid ($type:normal){
+    list-style:none;
+    margin: 0;
+    padding: 0;
+    margin-left: -$gutter;
+    &:after{
+      content: "";
+      display: table;
+      clear: both
+    }
+    & > * {
+      padding-left: $gutter;
+      float: left;
+      width: 100%;
+    }
+    @include respond-to(nth(nth($breakpoints,1),1)){
+      & > * {
+        width: 100% !important;
+      }
+    }
+    @if $type == full {
+      margin-left: 0;
+      & > * {
+        padding-left: 0;
+      }
+    }
+    @else if $type == wide {
+      margin-left: $gutter * -2;
+      & > * {
+        padding-left: $gutter * 2;
+      } 
+    }
+    @else if $type == narrow {
+      margin-left: -($gutter / 2);
+      & > * {
+        padding-left: $gutter / 2;
+      }
+    }
  }
 
- @each $breakpoint in $breakpoints{
- 	$name: nth($breakpoint, 1);
-    @include respond-to($name) {
-       @include device-type-grid('#{$name}--');
-    }
+
+/**
+ * example @include cell(6 of 12);
+ */
+
+ @mixin cell ($span) {
+  $total-columns: nth($span, 3);
+  $size: nth($span, 1);
+  width: #{100 / ($total-columns / $size)}% !important;
  }
