--- a/objects/_grid.scss
+++ b/objects/_grid.scss
@@ -138,8 +138,22 @@
  * example @include cell(6 of 12);
  */
 
- @mixin cell ($span) {
+@mixin cell ($span) {
   $total-columns: nth($span, 3);
   $size: nth($span, 1);
   width: #{100 / ($total-columns / $size)}% !important;
- }
+}
+
+@mixin push ($span) {
+  position: relative;
+  $total-columns: nth($span, 3);
+  $size: nth($span, 1);
+  left: #{100 / ($total-columns / $size)}%;
+}
+
+@mixin pull ($span) {
+  position: relative;
+  $total-columns: nth($span, 3);
+  $size: nth($span, 1);
+  right: #{100 / ($total-columns / $size)}%;
+}
