--- a/objects/_grid.scss
+++ b/objects/_grid.scss
@@ -148,12 +148,12 @@
   position: relative;
   $total-columns: nth($span, 3);
   $size: nth($span, 1);
-  left: #{100 / ($total-columns / $size)}%;
+  left: (100 / ($total-columns / $size)) * 1%;
 }
 
 @mixin pull ($span) {
   position: relative;
   $total-columns: nth($span, 3);
   $size: nth($span, 1);
-  right: #{100 / ($total-columns / $size)}%;
+  right: (100 / ($total-columns / $size)) * 1%;
 }
