--- a/nicecss.scss
+++ b/nicecss.scss
@@ -4,6 +4,9 @@
 
 @import "defaults";
 
+@import "functions/utils";
+@import "functions/metrics";
+
 @import "base/functions";
 @import "base/mixins";
 @import "base/reset";
