--- a/objects/_grid.scss
+++ b/objects/_grid.scss
@@ -1,6 +1,4 @@
-/*------------------------------------*\
-    $NICE GRID
-\*------------------------------------*/
+// @ _grid.scss
 *,
 *:after,
 *:before {
@@ -11,89 +9,9 @@
           box-sizing: border-box
 }
 
-.grid,
-%grid {
-  list-style:none;
-  margin: 0;
-  padding: 0;
-  margin-left: -$gutter;
-  &:after{
-    content: "";
-    display: table;
-    clear: both
-  }
-  & > * {
-    padding-left: $gutter;
-    float: left;
-    width: 100%;
-  }
-  @include respond-to(nth(nth($breakpoints,1),1)){
-    & > * {
-      width: 100% !important;
-    }
-  }
-}
+////////// FIXED GUTTER GRID ///////////////
 
-.grid--full,
-%grid--full {
-  margin-left: 0;
-  & > * {
-    padding-left: 0;
-  }
-}
-
-.grid--wide,
-%grid--wide {
-  margin-left: $gutter * -2;
-  & > * {
-    padding-left: $gutter * 2;
-  }
-}
-
-.grid--narrow,
-%grid--narrow {
-  margin-left: -($gutter / 2);
-  & > * {
-    padding-left: $gutter / 2;
-  }
-}
-
-%cell--1, .cell--1        	{ width: 100%; }
-%cell--1-2, .cell--1-2   	  { width: 50%; *width: 49.969%;}
-%cell--1-3, .cell--1-3   	  { width: 33.3333%; *width: 33.3023%; }
-%cell--2-3, .cell--2-3   	  { width: 66.6667%; *width: 66.6357%; }
-%cell--1-4, .cell--1-4   	  { width: 25%; *width: 24.969%; }
-%cell--3-4, .cell--3-4   	  { width: 75%; *width: 74.969%; }
-%cell--1-5, .cell--1-5   	  { width: 20%; *width: 19.969%; }
-%cell--2-5, .cell--2-5   	  { width: 40%; *width: 39.969%; }
-%cell--3-5, .cell--3-5   	  { width: 60%; *width: 59.969%; }
-%cell--4-5, .cell--4-5   	  { width: 80%; *width: 79.969%; }
-%cell--1-6, .cell--1-6   	  { width: 16.6667%; *width: 16.6357%; }
-%cell--5-6, .cell--5-6   	  { width: 83.3333%; *width: 83.3023%; }
-%cell--1-8, .cell--1-8   	  { width: 12.5%; *width: 12.469%; }
-%cell--3-8, .cell--3-8   	  { width: 37.5%; *width: 37.469%; }
-%cell--5-8, .cell--5-8   	  { width: 62.5%; *width: 62.469%; }
-%cell--7-8, .cell--7-8   	  { width: 87.5%; *width: 87.469%; }
-%cell--1-12, .cell--1-12  	{ width: 8.3333%; *width: 8.3023%; }
-%cell--5-12, .cell--5-12  	{ width: 41.6667%; *width: 41.6357%; }
-%cell--7-12, .cell--7-12  	{ width: 58.3333%; *width: 58.3023%; }
-%cell--11-12, .cell--11-12 	{ width: 91.6667%; *width: 91.6357%; }
-%cell--1-24, .cell--1-24  	{ width: 4.1667%; *width: 4.1357%; }
-%cell--5-24, .cell--5-24  	{ width: 20.8333%; *width: 20.8023%; }
-%cell--7-24, .cell--7-24  	{ width: 29.1667%; *width: 29.1357%; }
-%cell--11-24, .cell--11-24 	{ width: 45.8333%; *width: 45.8023%; }
-%cell--13-24, .cell--13-24 	{ width: 54.1667%; *width: 54.1357%; }
-%cell--17-24, .cell--17-24 	{ width: 70.8333%; *width: 70.8023%; }
-%cell--19-24, .cell--19-24 	{ width: 79.1667%; *width: 79.1357%; }
-%cell--23-24, .cell--23-24 	{ width: 95.8333%; *width: 95.8023%; }
-
-
-
-/**
- * Mixins
- */
-
- @mixin grid ($type:normal){
+ @mixin grid ($wide:normal){
     list-style:none;
     margin: 0;
     padding: 0;
@@ -113,19 +31,19 @@
         width: 100% !important;
       }
     }
-    @if $type == full {
+    @if $wide == full {
       margin-left: 0;
       & > * {
         padding-left: 0;
       }
     }
-    @else if $type == wide {
+    @else if $wide == wide {
       margin-left: $gutter * -2;
       & > * {
         padding-left: $gutter * 2;
       } 
     }
-    @else if $type == narrow {
+    @else if $wide == narrow {
       margin-left: -($gutter / 2);
       & > * {
         padding-left: $gutter / 2;
@@ -144,16 +62,65 @@
   width: #{100 / ($total-columns / $size)}% !important;
 }
 
-@mixin push ($span) {
+@mixin push-cell ($span) {
   position: relative;
   $total-columns: nth($span, 3);
   $size: nth($span, 1);
   left: (100 / ($total-columns / $size)) * 1%;
 }
 
-@mixin pull ($span) {
+@mixin pull-cell ($span) {
   position: relative;
   $total-columns: nth($span, 3);
   $size: nth($span, 1);
   right: (100 / ($total-columns / $size)) * 1%;
+}
+
+
+////////// FLUID GUTTER GRID ///////////////
+
+@mixin fgrid() {
+  list-style:none;
+  margin: 0;
+  padding: 0;
+
+  &:after{
+    content: "";
+    display: table;
+    clear: both
+  }
+
+  & > * {
+    margin-right: gutter-fix-to-percent($gutter);
+    float: left;
+    width: 100%;
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+
+  @include respond-to(nth(nth($breakpoints,1),1)){
+    & > * {
+      width: 100% !important;
+    }
+  }
+}
+
+@mixin fcell ($span) {
+  $total-columns: nth($span, 3);
+  $size: nth($span, 1);
+  $remaining-width: 100% -  gutter-fix-to-percent($gutter) * ($total-columns - 1);
+  width: #{$remaining-width / ($total-columns / $size)}% !important;
+}
+
+@mixin fgrid-cover($index:auto) {
+  @if $index == auto {
+    &:last-child {
+      margin-right: 0;
+    }
+  } @else {
+    &:nth-child(#{$index}) {
+      margin-right: 0;
+    }
+  }
 }
