--- a/base/_mixins.scss
+++ b/base/_mixins.scss
@@ -218,3 +218,17 @@
     height: 100%; width: .1px;
   }
 }
+
+@mixin hide-text(){
+  border: 0;
+  font: 0/0 a;
+  text-shadow: none;
+  color: transparent;
+}
+
+@mixin image-replacement($url, $w, $h){
+  @include hide-text;
+  background: url(#{$url});
+  width: #{$w}px;
+  height: #{$h}px;
+}
