--- a/objects/_grid.scss
+++ b/objects/_grid.scss
@@ -27,7 +27,9 @@
       width: 100%;
     }
     @include respond-to(nth(nth($breakpoints,1),1)){
+      margin-left: 0;
       & > * {
+        padding-left: 0;
         width: 100% !important;
       }
     }
