--- a/base/_mixins.scss
+++ b/base/_mixins.scss
@@ -1,6 +1,8 @@
-/*------------------------------------*\
-    $MIXINS
-\*------------------------------------*/
+/* 
+------------------------------------------------
+MIXINS
+------------------------------------------------
+*/
 
 @mixin font-size($font-size, $line-height:true){
     font-size:$font-size;
