--- a/base/_reset.scss
+++ b/base/_reset.scss
@@ -1,6 +1,9 @@
-/*------------------------------------*\
-    $RESET
-\*------------------------------------*/
+/* 
+------------------------------------------------
+RESET
+------------------------------------------------
+*/
+
 *{
     &,
     &:before,
