--- a/objects/_flag.scss
+++ b/objects/_flag.scss
@@ -1,3 +1,9 @@
+/* 
+------------------------------------------------
+FLAG (@csswizardry)
+------------------------------------------------
+*/
+
 .flag {
     display: table;
     width: 100%;
