--- a/objects/_grid.scss
+++ b/objects/_grid.scss
@@ -1,4 +1,9 @@
-// @ _grid.scss
+/* 
+------------------------------------------------
+GRIDS
+------------------------------------------------
+*/
+
 *,
 *:after,
 *:before {
