--- a/objects/_media.scss
+++ b/objects/_media.scss
@@ -1,4 +1,9 @@
-/* ====== media ====== */
+/* 
+------------------------------------------------
+MEDIA (@stubbornella)
+------------------------------------------------
+*/
+
 .media { 
 	$media-margin: 10px;
 	@extend %clearfix;
