--- a/objects/_tabdata.scss
+++ b/objects/_tabdata.scss
@@ -1,3 +1,9 @@
+/* 
+------------------------------------------------
+TABDATA
+------------------------------------------------
+*/
+
 .tabdata {
 	.tabdata__group {
 		display: block;
