--- a/_defaults.scss
+++ b/_defaults.scss
@@ -1,30 +1,27 @@
+/* 
+------------------------------------------------
+BASE
+------------------------------------------------
+*/
 
-/*------------------------------------*\
-    $BASE
-\*------------------------------------*/
-/**
- * Base stuff
- */
+// BASE METRICS --------------------------------
 $base-font-size:    16px!default;
 $base-line-height:  24px!default;
 
-/**
- * Base font-family.
- */
+// BASE FACES   --------------------------------
 $base-font-family:  sans-serif!default;
 
-/**
- * Default colour for objects’ borders etc.
- */
+// BASE COLORS  --------------------------------
 $base-ui-color:     #ccc!default;
 $base-text-color:   #333!default;
 
 
 
-
-/*------------------------------------*\
-    $RESPONSIVE
-\*------------------------------------*/
+/* 
+------------------------------------------------
+RESPONSIVE
+------------------------------------------------
+*/
 
 $breakpoints: (
     'mobile' '(max-width: 480px)',
@@ -34,12 +31,12 @@ $breakpoints: (
 
 
 
-/*------------------------------------*\
-    $FONT-SIZES
-\*------------------------------------*/
-/**
- * Font-sizes (in pixels). Refer to relevant sections for their implementations.
- */
+/* 
+------------------------------------------------
+FONT SIZES
+------------------------------------------------
+*/
+
 $giga-size:         96px!default;
 $mega-size:         72px!default;
 $kilo-size:         48px!default;
@@ -56,39 +53,47 @@ $micro-size:        10px!default;
 
 
 
-/*------------------------------------*\
-    $BRAND
-\*------------------------------------*/
-/**
- * Brand stuff
- */
+/* 
+------------------------------------------------
+BRAND
+------------------------------------------------
+*/
+
 $brand-color:       #4a8ec2!default;
 $brand-face:        "Helvetica Neue", sans-serif!default;
-
-/**
- * How big would you like round corners to be by default?
- */
 $brand-round:        4px!default;
 
 
-/*------------------------------------*\
-    $GRID
-\*------------------------------------*/
-/**
- * Gutter grid
- */
+/* 
+------------------------------------------------
+GRID
+------------------------------------------------
+*/
+
 $gutter:            30px!default;
 
 
-/*------------------------------------*\
-    $FRAMEWORK
-\*------------------------------------*/
-/**
- * inuit.css will work these next ones out for use within the framework.
- *
- * Assign our `$base-line-height` to a new spacing var for more transparency.
- */
+
+/* 
+------------------------------------------------
+METRICS VARS
+------------------------------------------------
+*/
+
 $base-spacing-unit:     $base-line-height!default;
 $half-spacing-unit:     $base-spacing-unit / 2!default;
 $double-spacing-unit:   $base-spacing-unit * 2!default;
 $line-height-ratio:     $base-line-height / $base-font-size;
+
+
+/* 
+------------------------------------------------
+FRAMEWORK SETTINGS
+------------------------------------------------
+*/
+
+$use-oocss-helpers: true!default;
+$use-forms: true!default;
+$use-buttons: true!default;
+$use-lists: true!default;
+$use-headings: true!default;
