--- a/base/_buttons.scss
+++ b/base/_buttons.scss
@@ -1,47 +1,49 @@
-/*------------------------------------*\
-    $BUTTONS
-\*------------------------------------*/
+/* 
+------------------------------------------------
+BUTTONS
+------------------------------------------------
+*/
 
-/**
- * Base button
- */
-%button,
-.button {
-	display: inline-block;
-	line-height: normal;
-	white-space: nowrap;
-	vertical-align: baseline;
-	text-align: center;
-	cursor: pointer;
-	-webkit-user-drag: none;
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
-	padding: 0.5em 1.5em;
-	color: $base-text-color;
-	background-color: $base-ui-color;
-	text-decoration: none;
-	border-radius: $brand-round;
-	&:hover,
-	&:focus,
-	&:active {
-		background-color: darken($base-ui-color,20%);
-		outline: 0;
+@if $use-buttons {
+
+	// BASE BUTTON  --------------------------------
+	%button,
+	.button {
+		display: inline-block;
+		line-height: normal;
+		white-space: nowrap;
+		vertical-align: baseline;
+		text-align: center;
+		cursor: pointer;
+		-webkit-user-drag: none;
+		-webkit-user-select: none;
+		-moz-user-select: none;
+		-ms-user-select: none;
+		user-select: none;
+		padding: 0.5em 1.5em;
+		color: $base-text-color;
+		background-color: $base-ui-color;
+		text-decoration: none;
+		border-radius: $brand-round;
+		&:hover,
+		&:focus,
+		&:active {
+			background-color: darken($base-ui-color,20%);
+			outline: 0;
+		}
 	}
-}
 
 
-/**
- * Button sizes
- */
+	// BUTTON SIZES  --------------------------------
 
-%button--small,
-.button--small {
-	font-size: 75%;
-}
+	%button--small,
+	.button--small {
+		font-size: 75%;
+	}
 
-%button--big,
-.button--big {
-	font-size: 125%;
+	%button--big,
+	.button--big {
+		font-size: 125%;
+	}
+	
 }
