--- a/base/_main.scss
+++ b/base/_main.scss
@@ -1,6 +1,9 @@
-/*------------------------------------*\
-    $MAIN
-\*------------------------------------*/
+/* 
+------------------------------------------------
+MAIN
+------------------------------------------------
+*/
+
 html{
     font:#{($base-font-size/16px)*1em}/#{$line-height-ratio} $base-font-family;
     // overflow-y: auto;
